--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-bootstrap4 = "*"
 requests = "*"
 django-widget-tweaks = "*"
 pandas = "*"
+django-tables2 = "*"
 
 [requires]
 python_version = "3.8"
