--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ django-widget-tweaks = "*"
 pandas = "*"
 django-tables2 = "*"
 openpyxl = "*"
+celery = "*"
+redis = "*"
 
 [requires]
 python_version = "3.8"
