Add export format choice (csv or xlsx for now).

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ requests = "*"
 django-widget-tweaks = "*"
 pandas = "*"
 django-tables2 = "*"
+openpyxl = "*"
 
 [requires]
 python_version = "3.8"
