--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,39 @@
 -i https://pypi.org/simple
+amqp==2.5.2
 asgiref==3.2.5
 beautifulsoup4==4.8.2
+billiard==3.6.3.0
+celery==4.4.2
 certifi==2019.11.28
 chardet==3.0.4
 dj-database-url==0.5.0
 django-bootstrap4==1.1.1
+django-celery-results==1.2.1
 django-heroku==0.3.1
-django-widget-tweaks==1.4.6
+django-redis-cache==2.1.0
+django-tables2==2.2.1
+django-widget-tweaks==1.4.8
 django==3.0.4
+et-xmlfile==1.0.1
 gunicorn==20.0.4
 idna==2.9
-numpy==1.18.1
-pandas==1.0.2
+jdcal==1.4.1
+kombu==4.6.8
+numpy==1.18.2
+openpyxl==3.0.3
+pandas==1.0.3
 praw==6.5.1
 prawcore==1.0.1
 psycopg2==2.8.4
 python-dateutil==2.8.1
 pytz==2019.3
+redis==3.4.1
 requests==2.23.0
 six==1.14.0
 soupsieve==2.0
 sqlparse==0.3.1
 update-checker==0.16
 urllib3==1.25.8
+vine==1.3.0
 websocket-client==0.57.0
 whitenoise==5.0.1
