--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,27 @@
 version: '3'
 
 services:
-  redis:
+  reddit_django-redis:
+    container_name: reddit_django-redis
     image: redis
+    restart: always
   web:
     container_name: reddit_django
     build: .
-    command: gunicorn reddit_django.wsgi --bind 0.0.0.0:8000
+    restart: always
+    command: bash -c "python manage.py migrate && gunicorn reddit_django.wsgi --bind 0.0.0.0:8000 & celery -A reddit_django worker -l info"
     volumes:
       - .:/code
-        # ports:
-        #   - "8000:8000"
     depends_on:
-      - redis
-    environment:
-      - HEROKU_REDIS_ROSE_URL=redis://redis:6379
+      - reddit_django-redis
     labels:
         - "traefik.enable=true"
         - "traefik.http.routers.reddit_django.entrypoints=secure"
         - "traefik.http.routers.reddit_django.rule=Host(`reddit.$DOMAIN`)"
         - "traefik.http.services.reddit_django.loadbalancer.server.port=8000"
         - "traefik.http.routers.reddit_django.tls.certresolver=le"
-  celery:
-    build: .
-    command: celery -A reddit_django worker -l info
-    volumes:
-      - .:/code
-    depends_on:
-      - redis
-      - web
     environment:
-      - HEROKU_REDIS_ROSE_URL=redis://redis:6379
+        - HEROKU_REDIS_ROSE_URL=redis://reddit_django-redis:6379
 
 networks:
     default:
