--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     container_name: reddit_django
     build: .
     restart: always
-    command: bash -c "python manage.py migrate && gunicorn reddit_django.wsgi --bind 0.0.0.0:8000 & celery -A reddit_django worker -l info"
+    command: bash -c "python manage.py migrate && gunicorn reddit_django.wsgi --bind 0.0.0.0:8000 --timeout 600 & celery -A reddit_django worker -l info"
     volumes:
       - .:/code
     depends_on:
