--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,41 @@
 -i https://pypi.org/simple
 amqp==2.5.2
-asgiref==3.2.5
-beautifulsoup4==4.8.2
+asgiref==3.2.7
+beautifulsoup4==4.9.0
 billiard==3.6.3.0
 celery==4.4.2
-certifi==2019.11.28
+certifi==2020.4.5.1
 chardet==3.0.4
+click==7.1.2
 dj-database-url==0.5.0
 django-bootstrap4==1.1.1
 django-celery-results==1.2.1
 django-heroku==0.3.1
-django-redis-cache==2.1.0
-django-tables2==2.2.1
+django-redis-cache==2.1.1
+django-tables2==2.3.1
 django-widget-tweaks==1.4.8
-django==3.0.4
+django==3.0.6
 et-xmlfile==1.0.1
 gunicorn==20.0.4
 idna==2.9
 jdcal==1.4.1
 kombu==4.6.8
-numpy==1.18.2
+numpy==1.18.4
 openpyxl==3.0.3
 pandas==1.0.3
-praw==6.5.1
-prawcore==1.0.1
-psycopg2==2.8.4
+praw==7.0.0
+prawcore==1.3.0
+psaw==0.0.12
+psycopg2==2.8.5
 python-dateutil==2.8.1
-pytz==2019.3
-redis==3.4.1
+pytz==2020.1
+redis==3.5.1
 requests==2.23.0
 six==1.14.0
 soupsieve==2.0
 sqlparse==0.3.1
-update-checker==0.16
-urllib3==1.25.8
+update-checker==0.17
+urllib3==1.25.9
 vine==1.3.0
 websocket-client==0.57.0
 whitenoise==5.0.1
