--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     labels:
         - "traefik.enable=true"
         - "traefik.http.routers.reddit_django.entrypoints=secure"
-        - "traefik.http.routers.reddit_django.rule=Host(`reddit.$DOMAIN`)"
+        - "traefik.http.routers.reddit_django.rule=Host(`reddit-tools.$DOMAIN`)"
         - "traefik.http.services.reddit_django.loadbalancer.server.port=8000"
         - "traefik.http.routers.reddit_django.tls.certresolver=le"
     environment:
