--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,11 @@
 -i https://pypi.org/simple
 amqp==5.0.6; python_version >= '3.6'
 asgiref==3.4.1; python_version >= '3.6'
-beautifulsoup4==4.9.3
+beautifulsoup4==4.10.0; python_version >= '3.1'
 billiard==3.6.4.0
 celery==5.1.2
 certifi==2021.5.30
-charset-normalizer==2.0.4; python_version >= '3'
+charset-normalizer==2.0.6; python_version >= '3'
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.2.0
@@ -30,8 +30,8 @@ gunicorn==20.1.0
 idna==3.2; python_version >= '3'
 kombu==5.1.0; python_version >= '3.6'
 numpy==1.21.2; python_version < '3.11' and python_version >= '3.7'
-openpyxl==3.0.7
-pandas==1.3.2
+openpyxl==3.0.8
+pandas==1.3.3
 praw==7.4.0
 prawcore==2.3.0; python_version ~= '3.6'
 prompt-toolkit==3.0.20; python_full_version >= '3.6.2'
@@ -42,8 +42,8 @@ pytz==2021.1
 redis==3.5.3
 requests==2.26.0
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-soupsieve==2.2.1; python_version >= '3'
-sqlparse==0.4.1; python_version >= '3.5'
+soupsieve==2.2.1; python_version >= '3.6'
+sqlparse==0.4.2; python_version >= '3.5'
 update-checker==0.18.0
 urllib3==1.26.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 vine==5.0.0; python_version >= '3.6'
