--- a/requirements.txt
+++ b/requirements.txt
@@ -6,47 +6,48 @@
 #
 
 -i https://pypi.org/simple
-amqp==5.0.6; python_version >= '3.6'
+amqp==5.0.9; python_version >= '3.6'
 asgiref==3.4.1; python_version >= '3.6'
 beautifulsoup4==4.10.0; python_version >= '3.1'
 billiard==3.6.4.0
-celery==5.1.2
-certifi==2021.5.30
-charset-normalizer==2.0.6; python_version >= '3'
-click-didyoumean==0.0.3
+celery==5.2.3
+certifi==2021.10.8
+charset-normalizer==2.0.10; python_version >= '3'
+click-didyoumean==0.3.0; python_version < '4' and python_full_version >= '3.6.2'
 click-plugins==1.1.1
 click-repl==0.2.0
-click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+click==8.0.3; python_version >= '3.6'
 dj-database-url==0.5.0
-django-bootstrap4==3.0.1
+django-bootstrap4==21.2
 django-celery-results==2.2.0
 django-heroku==0.3.1
 django-redis-cache==3.0.0
-django-tables2==2.4.0
-django-widget-tweaks==1.4.8
-django==3.2.7
+django-tables2==2.4.1
+django-widget-tweaks==1.4.12
+django==4.0.1
 et-xmlfile==1.1.0; python_version >= '3.6'
 gunicorn==20.1.0
-idna==3.2; python_version >= '3'
-kombu==5.1.0; python_version >= '3.6'
-numpy==1.21.2; python_version < '3.11' and python_version >= '3.7'
-openpyxl==3.0.8
-pandas==1.3.3
-praw==7.4.0
+idna==3.3; python_version >= '3'
+kombu==5.2.3; python_version >= '3.7'
+numpy==1.22.0; python_version >= '3.10'
+openpyxl==3.0.9
+pandas==1.3.5
+praw==7.5.0
 prawcore==2.3.0; python_version ~= '3.6'
-prompt-toolkit==3.0.20; python_full_version >= '3.6.2'
+prompt-toolkit==3.0.24; python_full_version >= '3.6.2'
 psaw==0.1.0
-psycopg2==2.9.1; python_version >= '3.6'
+psycopg2==2.9.3; python_version >= '3.6'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pytz==2021.1
+pytz==2021.3
 redis==3.5.3
-requests==2.26.0
+requests==2.27.1
+setuptools==59.6.0; python_version >= '3.6'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-soupsieve==2.2.1; python_version >= '3.6'
+soupsieve==2.3.1; python_version >= '3.6'
 sqlparse==0.4.2; python_version >= '3.5'
 update-checker==0.18.0
-urllib3==1.26.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 vine==5.0.0; python_version >= '3.6'
 wcwidth==0.2.5
-websocket-client==1.2.1; python_version >= '3.6'
+websocket-client==1.2.3; python_version >= '3.6'
 whitenoise==5.3.0; python_version >= '3.5' and python_version < '4'
