--- a/Pipfile
+++ b/Pipfile
@@ -20,7 +20,7 @@ celery = "*"
 redis = "*"
 django-celery-results = "*"
 django-redis-cache = "*"
-psaw = "*"
+pmaw = "*"
 
 [requires]
 python_version = "3.10"
